<resources>
    <string name="app_name">Android Labs</string>
    <string name="hello_message">Hello World!</string>
    <string name="ButtonText">I\'m a button</string>
    <string name="Button_Text">CLICK HERE</string>
    <string name="checkBox">Check this out!</string>
    <string name="hint">Type here</string>
    <string name="BigText">Look at my GUI</string>
    <string name="toast_message">Here is more information</string>
    <string name="switch_on">The switch is now on</string>
    <string name="switch_off">The switch is now off</string>
    <string name="checked">This box is now checked</string>
    <string name="unchecked">This box is now unchecked</string>
    <string name="undo">undo</string>
    <string name="switcher">Switch on/off</string>
    <string name="msg1">Enter your email address:</string>
    <string name="hintmsg">Type email here</string>
    <string name="passmsg">Type your password:</string>
    <string name="login">Login</string>
    <string name="profileText">Your Profile</string>
    <string name="nameText">Your name:</string>
    <string name="emailText">Your email: </string>
    <string name="emailPrompt">Enter your email</string>
    <string name="namePrompt">Enter your name</string>
    <string name="pictureText">Your picture:</string>
    <string name="clickMessage">Click the button above to take a picture</string>
    <string name="sendBtn">SEND</string>
    <string name="type_here">Type here</string>
    <string name="receiveBtn">RECEIVE</string>
    <string name="receivedMsg">blah</string>
    <string name="sentMsg">blah</string>
</resources>