<?xml version="1.0" encoding="utf-8"?>
<GridLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:rowCount="4"
    android:columnCount="2"
    android:orientation="vertical">




    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/BigText"
        android:textSize="30sp"
        android:layout_gravity=""
        android:layout_columnSpan="2"/>

    <Button
        android:id="@+id/button6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="fill"
        android:layout_weight="1"
        android:background="#C8C8C7"
        android:text="@string/Button_Text" />



    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:gravity="fill"
        android:src="@drawable/flag" />


    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_columnSpan="2"
        android:hint="@string/hint"
        android:inputType="textPersonName" />


    <CheckBox
        android:id="@+id/checkBox"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:gravity="fill"
        android:text="@string/checkBox"  />

    <Switch
        android:id="@+id/switcher"
        android:layout_width="170dp"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:gravity="fill"
        android:text="@string/switcher" />




</GridLayout>