<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">


    <TextView
        android:id="@+id/tv"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/BigText"
        android:textSize="30sp"/>

    <Button
        android:id="@+id/btn"
        android:layout_below="@id/tv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAlignment="center"
        android:layout_alignRight="@id/iv"
        android:layout_alignParentLeft="true"
        android:background="#C8C8C7"
        android:text="@string/Button_Text" />


    <CheckBox
        android:id="@+id/checkBox"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/tv"
        android:layout_alignBottom="@id/btn"
        android:layout_centerHorizontal="true"
        android:layout_alignParentRight="true"
        android:layout_toRightOf="@id/btn"
        android:text="@string/checkBox" />

    <ImageView
        android:id="@+id/iv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/btn"
        android:layout_marginTop="1dp"
        android:layout_weight="1"
        android:gravity="fill"
        android:src="@drawable/flag" />

    <Switch
        android:id="@+id/switcher"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/checkBox"
        android:layout_alignParentRight="true"
        android:layout_marginLeft="-1dp"

        android:layout_marginRight="1dp"
        android:layout_toRightOf="@id/iv"
        android:layout_weight="1"
        android:gravity="fill"
        android:text="@string/switcher" />

    <EditText
        android:id="@+id/et"
        android:layout_below="@id/iv"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/hint"
        android:inputType="textPersonName" />


</RelativeLayout>