<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">


    <ListView
        android:id="@+id/myList"
        android:layout_above="@id/sendBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />



    <Button
        android:id="@+id/sendBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/sendBtn"
        android:layout_alignParentBottom="true" />



    <Button
        android:id="@+id/receiveBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/receiveBtn"
        android:layout_alignParentBottom="true"
        android:layout_alignParentRight="true" />

    <EditText
        android:id="@+id/typeHerePrompt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:hint="@string/type_here"
        android:layout_alignParentBottom="true"
        android:layout_toRightOf="@id/sendBtn"
        android:layout_toLeftOf="@id/receiveBtn"

        />


</RelativeLayout>



